fixed distorted wizard image

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -199,6 +199,7 @@ background: white;
   image-orientation: center;
   position: absolute;
     top: -1; bottom:0; left: 0; right:0;
+    object-fit: contain;
 }
 #indexbig{
   font-size: 2em;
